// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Footer Default 1`] = `
Array [
  <div
    data-floating-menu-container=""
    role="main"
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "display": "flex",
        "flexDirection": "column",
        "padding": "3em",
      }
    }
  >
    <div>
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <footer>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        </footer>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
      <div
        className="info__overlay"
        style={
          Object {
            "background": "white",
            "bottom": 0,
            "display": "none",
            "left": 0,
            "overflow": "auto",
            "padding": "0 40px",
            "position": "fixed",
            "right": 0,
            "top": 0,
            "zIndex": 99999,
          }
        }
      >
        <button
          className="info__close-button"
          onClick={[Function]}
          style={
            Object {
              "background": "#027ac5",
              "border": "none",
              "borderRadius": "0 0 0 5px",
              "color": "#fff",
              "cursor": "pointer",
              "display": "block",
              "fontFamily": "sans-serif",
              "fontSize": "12px",
              "padding": "5px 15px",
              "position": "fixed",
              "right": 0,
              "top": 0,
            }
          }
          type="button"
        >
          ×
        </button>
        <div>
          <div
            style={
              Object {
                "backgroundColor": "#fff",
                "border": "1px solid #eee",
                "borderRadius": "2px",
                "color": "black",
                "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
                "fontSize": "15px",
                "fontWeight": 300,
                "lineHeight": 1.45,
                "marginBottom": "20px",
                "marginTop": "20px",
                "padding": "20px 40px 40px",
              }
            }
          >
            <div
              style={
                Object {
                  "borderBottom": "1px solid #eee",
                  "marginBottom": 10,
                  "paddingTop": 10,
                }
              }
            >
              <h1
                style={
                  Object {
                    "fontSize": "35px",
                    "margin": 0,
                    "padding": 0,
                  }
                }
              >
                Footer
              </h1>
              <h2
                style={
                  Object {
                    "fontSize": "22px",
                    "fontWeight": 400,
                    "margin": "0 0 10px 0",
                    "padding": 0,
                  }
                }
              >
                Default
              </h2>
            </div>
            
            <div>
              <h1
                style={
                  Object {
                    "borderBottom": "1px solid #EEE",
                    "fontSize": "25px",
                    "margin": "20px 0 0 0",
                    "padding": "0 0 5px 0",
                  }
                }
              >
                Story Source
              </h1>
              <pre
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#fafafa",
                    "display": "flex",
                    "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                    "fontSize": ".88em",
                    "justifyContent": "space-between",
                    "lineHeight": 1.5,
                    "overflowX": "scroll",
                    "padding": ".5rem",
                  }
                }
              >
                <div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 18,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#444",
                        }
                      }
                    >
                      &lt;
                      Footer
                    </span>
                    <span />
                    <span
                      style={
                        Object {
                          "color": "#444",
                        }
                      }
                    >
                      /&gt;
                    </span>
                  </div>
                </div>
                <button
                  onClick={[Function]}
                  style={
                    Object {
                      "alignSelf": "flex-start",
                      "backgroundColor": "rgb(255, 255, 255)",
                      "borderColor": "rgb(238, 238, 238)",
                      "borderImage": "initial",
                      "borderRadius": "3px",
                      "borderStyle": "solid",
                      "borderWidth": "1px",
                      "cursor": "pointer",
                      "flexShrink": "0",
                      "fontSize": "13px",
                      "overflow": "hidden",
                      "padding": "3px 10px",
                    }
                  }
                  type="button"
                >
                  Copy
                </button>
              </pre>
            </div>
            <div>
              <h1
                style={
                  Object {
                    "borderBottom": "1px solid #EEE",
                    "fontSize": "25px",
                    "margin": "20px 0 0 0",
                    "padding": "0 0 5px 0",
                  }
                }
              >
                Prop Types
              </h1>
              <div>
                <h3
                  style={
                    Object {
                      "margin": "20px 0 0 0",
                    }
                  }
                >
                  "
                  Footer
                  " Component
                </h3>
                <small>
                  No propTypes defined!
                </small>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <input
    aria-label="input-text-offleft"
    className="bx--visually-hidden"
    type="text"
  />,
]
`;

exports[`Storyshots Masthead: Test Default 1`] = `
Array [
  <div
    data-floating-menu-container=""
    role="main"
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "display": "flex",
        "flexDirection": "column",
        "padding": "3em",
      }
    }
  >
    <div>
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          className="masthead"
        >
          <div
            data-autoid="masthead__search"
          >
            <div
              aria-expanded={false}
              aria-haspopup="listbox"
              aria-owns="react-autowhatever-1"
              className="react-autosuggest__container"
              role="combobox"
            >
              <div>
                <input
                  aria-activedescendant={null}
                  aria-autocomplete="list"
                  aria-controls="react-autowhatever-1"
                  autoComplete="off"
                  className="react-autosuggest__input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  placeholder=""
                  type="text"
                  value=""
                />
                <button
                  onClick={[Function]}
                  type="button"
                />
              </div>
              <div
                className="react-autosuggest__suggestions-container"
                id="react-autowhatever-1"
                role="listbox"
              />
            </div>
          </div>
        </div>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
      <div
        className="info__overlay"
        style={
          Object {
            "background": "white",
            "bottom": 0,
            "display": "none",
            "left": 0,
            "overflow": "auto",
            "padding": "0 40px",
            "position": "fixed",
            "right": 0,
            "top": 0,
            "zIndex": 99999,
          }
        }
      >
        <button
          className="info__close-button"
          onClick={[Function]}
          style={
            Object {
              "background": "#027ac5",
              "border": "none",
              "borderRadius": "0 0 0 5px",
              "color": "#fff",
              "cursor": "pointer",
              "display": "block",
              "fontFamily": "sans-serif",
              "fontSize": "12px",
              "padding": "5px 15px",
              "position": "fixed",
              "right": 0,
              "top": 0,
            }
          }
          type="button"
        >
          ×
        </button>
        <div>
          <div
            style={
              Object {
                "backgroundColor": "#fff",
                "border": "1px solid #eee",
                "borderRadius": "2px",
                "color": "black",
                "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
                "fontSize": "15px",
                "fontWeight": 300,
                "lineHeight": 1.45,
                "marginBottom": "20px",
                "marginTop": "20px",
                "padding": "20px 40px 40px",
              }
            }
          >
            <div
              style={
                Object {
                  "borderBottom": "1px solid #eee",
                  "marginBottom": 10,
                  "paddingTop": 10,
                }
              }
            >
              <h1
                style={
                  Object {
                    "fontSize": "35px",
                    "margin": 0,
                    "padding": 0,
                  }
                }
              >
                Masthead: Test
              </h1>
              <h2
                style={
                  Object {
                    "fontSize": "22px",
                    "fontWeight": 400,
                    "margin": "0 0 10px 0",
                    "padding": 0,
                  }
                }
              >
                Default
              </h2>
            </div>
            
            <div>
              <h1
                style={
                  Object {
                    "borderBottom": "1px solid #EEE",
                    "fontSize": "25px",
                    "margin": "20px 0 0 0",
                    "padding": "0 0 5px 0",
                  }
                }
              >
                Story Source
              </h1>
              <pre
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#fafafa",
                    "display": "flex",
                    "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                    "fontSize": ".88em",
                    "justifyContent": "space-between",
                    "lineHeight": 1.5,
                    "overflowX": "scroll",
                    "padding": ".5rem",
                  }
                }
              >
                <div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 18,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#444",
                        }
                      }
                    >
                      &lt;
                      Masthead
                    </span>
                    <span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          type
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            "
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              branded
                            </span>
                            "
                          </span>
                        </span>
                         
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#444",
                        }
                      }
                    >
                      /&gt;
                    </span>
                  </div>
                </div>
                <button
                  onClick={[Function]}
                  style={
                    Object {
                      "alignSelf": "flex-start",
                      "backgroundColor": "rgb(255, 255, 255)",
                      "borderColor": "rgb(238, 238, 238)",
                      "borderImage": "initial",
                      "borderRadius": "3px",
                      "borderStyle": "solid",
                      "borderWidth": "1px",
                      "cursor": "pointer",
                      "flexShrink": "0",
                      "fontSize": "13px",
                      "overflow": "hidden",
                      "padding": "3px 10px",
                    }
                  }
                  type="button"
                >
                  Copy
                </button>
              </pre>
            </div>
            <div>
              <h1
                style={
                  Object {
                    "borderBottom": "1px solid #EEE",
                    "fontSize": "25px",
                    "margin": "20px 0 0 0",
                    "padding": "0 0 5px 0",
                  }
                }
              >
                Prop Types
              </h1>
              <div>
                <h3
                  style={
                    Object {
                      "margin": "20px 0 0 0",
                    }
                  }
                >
                  "
                  Masthead
                  " Component
                </h3>
                <table
                  className="info-table"
                >
                  <thead>
                    <tr>
                      <th>
                        property
                      </th>
                      <th>
                        propType
                      </th>
                      <th>
                        required
                      </th>
                      <th>
                        default
                      </th>
                      <th>
                        description
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td
                        className="info-table-monospace"
                      >
                        type
                      </td>
                      <td
                        className="info-table-monospace"
                      >
                        <span>
                          string
                        </span>
                      </td>
                      <td
                        className={null}
                      >
                        -
                      </td>
                      <td
                        className={null}
                      >
                        -
                      </td>
                      <td
                        className={null}
                      />
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <input
    aria-label="input-text-offleft"
    className="bx--visually-hidden"
    type="text"
  />,
]
`;
